--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head><title>Browser Starter</title></head>
+<link rel="stylesheet" href="/css/main.css">
 <body>
 <h1>shadow-cljs - Browser</h1>
 <div id="app"></div>
