--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head><title>Browser Starter</title></head>
 <link rel="stylesheet" href="/css/main.css">
 <body>
-<h1>shadow-cljs - Browser</h1>
-<div id="app"></div>
+
+  <div id="app"></div>
 
 <script src="/js/main.js"></script>
-<script>starter.browser.init();</script>
+<script>starter.quil.init();</script>
 </body>
 </html>
