--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><title>Browser Starter</title></head>
+<head><title>Quil Starter</title></head>
 <link rel="stylesheet" href="/css/main.css">
 <body>
 
