--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,37 @@
 <!doctype html>
 <html>
-<head><title>Quil Starter</title></head>
-<link rel="stylesheet" href="/css/main.css">
+<head><title>fxhash quil starter</title></head>
+<script id="fxhash-snippet">
+  //---- do not edit the following code (you can indent as you wish)
+  let alphabet = "123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ"
+  var fxhash = "oo" + Array(49).fill(0).map(_=>alphabet[(Math.random()*alphabet.length)|0]).join('')
+  let b58dec = (str) => str.split('').reduce((p,c,i) => p + alphabet.indexOf(c) * (Math.pow(alphabet.length, str.length-i-1)), 0)
+  let fxhashTrunc = fxhash.slice(2)
+  let regex = new RegExp(".{" + ((fxhash.length/4)|0) + "}", 'g')
+  let hashes = fxhashTrunc.match(regex).map(h => b58dec(h))
+  let sfc32 = (a, b, c, d) => {
+    return () => {
+      a |= 0; b |= 0; c |= 0; d |= 0
+      var t = (a + b | 0) + d | 0
+      d = d + 1 | 0
+      a = b ^ b >>> 9
+      b = c + (c << 3) | 0
+      c = c << 21 | c >>> 11
+      c = c + t | 0
+      return (t >>> 0) / 4294967296
+    }
+  }
+  var fxrand = sfc32(...hashes)
+  //---- /do not edit the following code
+</script>
+<!-- relative paths required according to fxhash docs: https://www.fxhash.xyz/articles/guide-mint-generative-token -->
+<link rel="stylesheet" href="./css/main.css">
 <body>
 
   <div id="app"></div>
 
-<script src="/js/main.js"></script>
+<!-- relative paths required according to fxhash docs: https://www.fxhash.xyz/articles/guide-mint-generative-token -->
+<script src="./js/main.js"></script>
 <script>starter.quil.init();</script>
 </body>
 </html>
