--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><title>fxhash quil starter</title></head>
+<head><title>digital city</title></head>
 <script id="fxhash-snippet">
   //---- do not edit the following code (you can indent as you wish)
   let alphabet = "123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ"
